--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.6",
-    "framer-motion": "10.16.0",
-    "react-icons": "4.12.0"
+    "react-icons": "4.12.0",
+    "tailwindcss": "3.3.6"
   },
   "devDependencies": {
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "typescript": "5.3.3",
+    "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "8.4.32",
-    "autoprefixer": "10.4.16"
+    "typescript": "5.3.3"
   }
 }
