--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "framer-motion": "^10.16.0",
@@ -17,13 +18,29 @@
     "tailwindcss": "3.3.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
-    "eslint": "8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "husky": "^8.0.0",
+    "jiti": "^2.5.1",
+    "lint-staged": "^15.5.2",
     "postcss": "8.4.32",
-    "typescript": "5.3.3"
+    "prettier": "^3.6.2",
+    "typescript": "5.3.3",
+    "typescript-eslint": "^8.41.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,jsx,tsx}": [
+      "npx eslint --fix",
+      "npx prettier --write"
+    ]
   }
 }
