--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch"
   },
   "dependencies": {
     "framer-motion": "^10.16.0",
@@ -18,11 +19,19 @@
     "tailwindcss": "3.3.6"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.34.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "10.4.16",
+    "babel-jest": "^30.1.2",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^10.1.8",
@@ -30,10 +39,13 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
     "husky": "^8.0.0",
+    "jest": "^30.1.2",
+    "jest-environment-jsdom": "^30.1.2",
     "jiti": "^2.5.1",
     "lint-staged": "^15.5.2",
     "postcss": "8.4.32",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.4.1",
     "typescript": "5.3.3",
     "typescript-eslint": "^8.41.0"
   },
