--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,5 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - NODE_ENV=production
     restart: unless-stopped
-    networks:
-      - portfolio-network
-
-networks:
-  portfolio-network:
-    driver: bridge
