--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "framer-motion": "^10.16.0",
     "react-icons": "^4.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1"
   }
 }
