--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watch"
+    "lint": "next lint"
+    
   },
   "dependencies": {
     "framer-motion": "^10.16.0",
