--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
     "framer-motion": "^10.16.0",
+    "next": "^14.0.4",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1"
+    "@types/next": "^8.0.7",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "eslint": "^8.57.1",
+    "typescript": "^5.9.2"
   }
 }
